--- a/BikeDaCity/app/src/main/res/values/strings.xml
+++ b/BikeDaCity/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
-    <string name="pref_header_general">Settings</string>
+    <string name="pref_header_location">Location Settings</string>
+    <string name="pref_header_map">Map Settings</string>
 
     <!-- Location settings -->
     <string name="pref_location_interval_title">Set interval duration</string>
@@ -40,60 +41,64 @@
         <item>1</item>
     </string-array>
 
-
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
     <string-array name="list_preference_entry_values">
         <item>1</item>
         <item>2</item>
         <item>3</item>
     </string-array>
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-    <string name="pref_location_category_name">Location</string>
-    <string name="pref_location_summary">Enable this if you want to request your location when the
-        interval specified is elapsed instead of every time this app is started.</string>
+    <string-array name="pref_default_view_entries">
+        <item>Available place</item>
+        <item>Free bike</item>
+    </string-array>
+    <string-array name="pref_default_view_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 
-    <string name="pref_title_location">Enable location service</string>
-    <string name="pref_map_category_name">Map Settings</string>
-    <string name="pref_map_provider_title">Map Provider</string>
+    <string-array name="pref_map_refresh_entries" >
+        <item>5 seconds</item>
+        <item>10 seconds</item>
+        <item>15 seconds</item>
+        <item>30 seconds</item>
+    </string-array>
+    <string-array name="pref_map_refresh_values" >
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+    </string-array>
+
+    <!-- Key used for shared preferences -->
     <string name="location_switch_key">location_switch</string>
     <string name="location_interval_list_key">location_interval_list</string>
     <string name="map_provider_list_key">map_provider_list_key</string>
-    <string name="location_summary">Currently set to: </string>
-    <string name="google_map_app_summary">Google Map application will be started to show the location
-                                          of the stations</string>
-    <string name="osm_app_summary">Open Street Map application will be started to show the location
-                                          of the stations</string>
-    <string name="osmdroid_app_summary">BikeDaCity will use the OSMDroid library to show the location
-                                          of the stations</string>
+    <string name="map_default_view_list_key">default_view</string>
+    <string name="map_refresh_switch_key">map_referesh_switch</string>
+    <string name="map_refresh_list_key">map_refresh</string>
 
+
+    <!-- Titles -->
+    <string name="pref_title_location">Enable location service</string>
+    <string name="pref_location_category_name">Location</string>
+    <string name="pref_map_category_name">Map Settings</string>
+    <string name="pref_map_provider_title">Map Provider</string>
+    <string name="pref_map_refresh_switch_title">Enable autorefresh</string>
+    <string name="pref_default_view_title">Default map view</string>
+    <string name="pref_map_refresh_title">Autorefresh interval</string>
+
+
+    <!-- Summaries -->
+    <string name="pref_location_summary">Enable this if you want to request your location when the
+        interval specified is elapsed instead of every time this app is started.</string>
+    <string name="google_map_app_summary">Use Google Map application</string>
+    <string name="osm_app_summary">Use Open Street Map application</string>
+    <string name="osmdroid_app_summary">Use the OSMDroid library with more features</string>
+    <string name="map_refresh_summary">Enable this for autorefreshing the map</string>
+    <string name="default_view_summary">Select the view you use more frequently</string>
+
+    <!-- URL -->
+    <string name="citybikes_url"></string>
 
 
 </resources>
