--- a/BikeDaCity/app/src/main/res/values/strings.xml
+++ b/BikeDaCity/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="source_site_1">citybik.es</string>
     <string name="source_site_2">github.com/osmdroid/osmdroid/</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_about">About</string>
 
     <!-- Strings related to Settings -->
     <string name="pref_header_location">Location Settings</string>
@@ -141,15 +142,15 @@
     <string name="infobox_waiting_location">Waiting for location update&#8230;</string>
 
     <!-- Station list contents -->
-    <string name="station_list_distance">Distance: $1%f m</string>
+    <string name="station_list_distance">Distance: %1$d m</string>
     <string name="station_list_availability">Availablity: %1$d %2$s</string>
     <string name="station_list_details">%1$s  %2$s</string>
     <string name="station_list_free_places">slots</string>
     <string name="station_list_free_bikes">bikes</string>
 
     <!-- Marker related strings -->
-    <string name="marker_description_available_places">Available places: %1$d\nDistance: %2$f</string>
-    <string name="marker_description_available_bikes">Available places: %1$d\nDistance: %2$f</string>
+    <string name="marker_description_available_places">Available places: %1$d\nDistance: %2$d</string>
+    <string name="marker_description_available_bikes">Available bikes: %1$d\nDistance: %2$d</string>
     <string name="marker_my_location_name">Me</string>
     <string name="marker_my_location_description">I\'m here!</string>
 
