--- a/BikeDaCity/app/src/main/res/values/strings.xml
+++ b/BikeDaCity/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="err_dialog_no_ext_storage_button">Exit</string>
     <string name="err_dialog_perm_not_granted_title">Exiting application</string>
     <string name="err_dialog_perm_not_granted_message">The application can\'t run without accessing
-    your location and without writing to the external storage. Please reconsider to grant it access.</string>
+    your location and without writing to the external storage. Please reconsider to grant it access to.</string>
     <string name="err_dialog_perm_not_granted_button">Exit</string>
     <string name="err_dialog_no_city_found_title">No bikes</string>
     <string name="err_dialog_no_city_found_message">BikeDaCity isn\'t able to find a bike sharing service here.\nSome features has been disabled</string>
